--- a/sections/pricing.liquid
+++ b/sections/pricing.liquid
@@ -379,11 +379,7 @@
     }
   }
 
-  .pricing-category-header:nth-of-type(1),
-.pricing-wrapper > .pricing-card:nth-of-type(2),
-.pricing-wrapper > .pricing-card:nth-of-type(3) {
-  display: none !important;
-}
+  /* Remove any unwanted hiding rules here if needed */
 </style>
 
 {% schema %}
