Changed Bot Suite Visual section

--- a/sections/pricing.liquid
+++ b/sections/pricing.liquid
@@ -136,6 +136,7 @@
     width: 100%;
     text-align: center;
     margin: 40px 0 20px 0;
+    order: -1;
   }
 
   .pricing-category-header:first-of-type {
@@ -414,7 +415,7 @@
   
   @media (min-width: 769px) {
     .pricing-wrapper {
-      flex-wrap: nowrap;
+      align-items: flex-start;
     }
     
     .pricing-card {
